--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ build = "build.rs"
 
 [dependencies]
 libc = "0.2.0"
+num-derive = "0.4.2"
+num-traits = "0.2.19"
 
 [build-dependencies]
 cc = "1.0"
